# xray-atlas

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .graphqlconfig.yml  .prettierignore  .vercelignore  AGENTS.md  AMPLIFY_SECRETS_SETUP.md  CONTRIBUTING.md  Dockerfile  NEXAFS_NORMALIZATION_IMPLEMENTATION_PLAN.md  ORCID_AUTH_SETUP.md  README.md  amplify.yml  amplify_outputs.json  bun.lockb  docker-compose.yml  eslint.config.cjs  eslint.config.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  schema.json  skills-lock.json  start-database.sh  tailwind.config.js  tailwind.config.ts  tsconfig.json
.cursor/: settings.json
.github/: FUNDING.yml  pr-body-temp.md  pull_request_template.md
amplify/: backend.ts
content/: references.bib
data/: D18.json  ITIC.json  N2200.json  P3HT.json  PBDB-T.json  PBTTT.json  PC61BM.json  PC71BM.json  Y11.json  Y6.json  local_nexafs_parse.ipynb  registry.json
docs/: ORCID_DEVELOPMENT_ALTERNATIVES.md  ORCID_ENVIRONMENT_SWITCHING.md  ORCID_SETUP.md  REALTIME_SETUP.md  TROUBLESHOOTING_ORCID.md  compliance-implementation.md  dashboard-stxm-integration-plan.md  dashboard-stxm-nexafs-parity-plan.md  data-insights.md  molecule-sketcher-pipeline-plan.md  nexafs-contribute-refactor-plan.md  nexafs-peak-overlay-design-note.md  process-nexafs-orchestration-plan.md
prisma/: Experiment.xml  (+9 more)
tests/kk-calc-validation/: README.txt  plot_kk_compare.py  pyproject.toml  run_reference.py  ts_discrete_kk_mirror.py
tests/kk-calc-validation/tools/: gen_henke_element_f2_bundle.py
(+1791 files in other folders)
