[project]
name = "kk-calc-validation"
version = "0.0.0"
description = "Pinned Python deps for kkcalc2 vs X-ray Atlas discrete KK + makima validation."
readme = "README.txt"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.14,<2",
  "kkcalc2 @ git+https://github.com/xraysoftmat/kkcalc.git",
  "matplotlib>=3.10.9",
]

[tool.uv]
package = false
