[project]
name = "kk-calc-validation"
version = "0.0.0"
description = "Pinned kkcalc2 workspace + SciPy/Matplotlib for kk-calc validation subprocesses (optical-beta KK_PP, makima)."
readme = "README.txt"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.14,<2",
  "kkcalc2",
  "matplotlib>=3.10.9",
  "ipykernel>=7.2.0",
  "jupyterlab>=4.5.7",
  "pandas>=3.0.3",
]

[tool.uv]
package = false
